--- a/arsenal-globals/Cargo.toml
+++ b/arsenal-globals/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "arsenal-assembler"
+name = "arsenal-globals"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = "1.0.175"
+serde_derive = "1.0.175"
 strum = "0.25.0"
 strum_macros = "0.25.1"
-arsenal-globals = { path = "../arsenal-globals" }
