--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "rust-analyzer.linkedProjects": [
         ".\\arsenal-assembler\\Cargo.toml",
         ".\\arsenal-assembler\\Cargo.toml"
-    ]
+    ],
+    "editor.cursorStyle": "line"
 }
