hopefully added dll interop with c add jump if not instructions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ arsenal-assembler = { path = "./arsenal-assembler" }
 arsenal-globals = { path = "./arsenal-globals" }
 arsenal-vm = { path = "./arsenal-vm" }
 arsenal-linker = { path = "./arsenal-linker" }
+dll_handler = { path = "./dll_handler" }
+libloading = "0.8.0"
