--- a/dll_handler/Cargo.toml
+++ b/dll_handler/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
-name = "arsenal-vm"
+name = "dll_handler"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-arsenal-globals = { path = "../arsenal-globals" }
-libc = "0.2.147"
-dll_handler = { path = "../dll_handler" }
+libffi = "3.2.0"
 libloading = "0.8.0"
